# actix-template

./: .env  Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: audit.yaml  general.yaml
.run/: Cargo Audit.run.xml  Cargo Watch.run.xml
configuration/: base.yaml  development.yaml  production.yaml
migrations/: 20230402193235_create_users_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/configuration/: environment.rs  mod.rs  settings.rs
src/routes/: mod.rs  user.rs
src/telemetry/: mod.rs
tests/: health_check.rs  user.rs
tests/common/: mod.rs
